Added line clear functionality, L Piece, and Square Piece

--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8" />
     <script src="./dist/bundle.js"></script>
   </head>
-  <header>
-    <h1>typescript tetris</h1>
-  </header>
-  <body>
-    <canvas id="canvas" width="300" height="550"></canvas>
-    <p id="test"></p>
-  </body>
+  <div style="display: flex; flex-direction: row; justify-content: center">
+    <div></div>
+    <div>
+      <header style="text-align: center;">
+        <h1>typescript tetris</h1>
+      </header>
+      <body>
+        <canvas id="canvas" width="300" height="550"></canvas>
+      </body>
+    </div>
+    <div></div>
+  </div>
 </html>
