--- a/index.html
+++ b/index.html
@@ -7,11 +7,22 @@
   <div style="display: flex; flex-direction: row; justify-content: center">
     <div></div>
     <div>
-      <header style="text-align: center;">
+      <header style="text-align: center">
         <h1>typescript tetris</h1>
       </header>
       <body>
-        <canvas id="canvas" width="300" height="550"></canvas>
+        <canvas
+          id="extraInfoCanvas"
+          width="100"
+          height="100"
+          style="position: absolute; left: 400px"
+        ></canvas>
+        <canvas
+          id="mainCanvas"
+          width="300"
+          height="550"
+          style="position: absolute"
+        ></canvas>
       </body>
     </div>
     <div></div>
