--- a/index.html
+++ b/index.html
@@ -4,27 +4,37 @@
     <meta charset="UTF-8" />
     <script src="./dist/bundle.js"></script>
   </head>
-  <div style="display: flex; flex-direction: row; justify-content: center">
-    <div></div>
-    <div>
-      <header style="text-align: center">
+  <body>
+    <div
+      style="width: 50%; margin: auto; display: flex; flex-direction: column"
+    >
+      <div style="text-align: center">
         <h1>typescript tetris</h1>
-      </header>
-      <body>
-        <canvas
-          id="extraInfoCanvas"
-          width="100"
-          height="100"
-          style="position: absolute; left: 400px"
-        ></canvas>
-        <canvas
-          id="mainCanvas"
-          width="300"
-          height="550"
-          style="position: absolute"
-        ></canvas>
-      </body>
+      </div>
+      <div style="display: flex; flex-direction: row">
+        <div style="margin: 20px">
+          <canvas id="extraInfoCanvas" width="100" height="100"></canvas>
+        </div>
+        <div style="margin: 20px">
+          <canvas id="mainCanvas" width="300" height="550"></canvas>
+        </div>
+        <div style="margin: 20px">
+          <h3>controls</h3>
+          <ul>
+            <li>
+              <strong>Left</strong>, <strong>Right</strong>, and
+              <strong>Down</strong> arrow keys to move
+            </li>
+            <li>
+              <strong>Up</strong> arrow key to rotate 90 degrees clockwise
+            </li>
+            <li>
+              <strong>Q</strong> key to hold a piece, <strong>W</strong> key to
+              release the held piece
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
-    <div></div>
-  </div>
+  </body>
 </html>
