--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   </head>
   <body>
     <div
-      style="width: 50%; margin: auto; display: flex; flex-direction: column"
+      style="width: 65%; margin: auto; display: flex; flex-direction: column"
     >
       <div style="text-align: center">
         <h1>typescript tetris</h1>
       </div>
       <div style="display: flex; flex-direction: row">
         <div style="margin: 20px">
-          <canvas id="extraInfoCanvas" width="100" height="100"></canvas>
+          <canvas id="extraInfoCanvas" width="160" height="600"></canvas>
         </div>
         <div style="margin: 20px">
           <canvas id="mainCanvas" width="300" height="550"></canvas>
@@ -29,8 +29,10 @@
               <strong>Up</strong> arrow key to rotate 90 degrees clockwise
             </li>
             <li>
-              <strong>Q</strong> key to hold a piece, <strong>W</strong> key to
-              release the held piece
+              <strong>Q</strong> key to hold a piece
+            </li>
+            <li>
+              <strong>Space</strong> key to drop piece
             </li>
           </ul>
         </div>
