Added messages canvas and game speed increase

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <script type="module" src="./src/main.ts"></script>
+    <link rel="stylesheet" href="./src/styles.css">
   </head>
   <body>
     <div
@@ -32,7 +33,7 @@
             </ul>
           </div>
           <div>
-            <p id="gameMessages"></p>
+            <canvas id="messagesCanvas" width="300" height="400"></canvas>
           </div>
         </div>
       </div>
