--- a/index.html
+++ b/index.html
@@ -2,47 +2,42 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <script type="module" src="./src/main.ts"></script>
-    <link rel="stylesheet" href="./src/styles.css" />
+    <script type="module" src="/src/main.ts"></script>
+    <link rel="stylesheet" href="/src/styles.css" />
   </head>
-  <body>
-    <div
-      style="width: 65%; margin: auto; display: flex; flex-direction: column"
-    >
-      <div style="text-align: center">
-        <h1>typescript tetris</h1>
+  <body class="bg-gray-800 text-white">
+    <div class="w-1/2 flex flex-col m-auto">
+      <div class="text-center mb-5">
+        <span class="text-3xl font-bold">typescript tetris</span>
       </div>
-      <div style="display: flex; flex-direction: row">
-        <div style="margin: 20px">
+      <div class="flex gap-20">
+        <div>
           <canvas id="extraInfoCanvas" width="100" height="100"></canvas>
         </div>
-        <div style="margin: 20px">
+        <div>
           <canvas id="mainCanvas" width="300" height="550"></canvas>
         </div>
-        <div style="display: flex">
-          <div style="margin: 20px; display: flex; flex-direction: column">
-            <div>
-              <h3>controls</h3>
-              <ul>
-                <li>
-                  <strong>Left/A</strong>, <strong>Right/D</strong>, and
-                  <strong>Down/S</strong> keys to move
-                </li>
-                <li>
-                  <strong>Up/W</strong> keys to rotate 90 degrees clockwise
-                </li>
-                <li><strong>Q</strong> key to hold a piece</li>
-                <li><strong>Space</strong> key to drop piece</li>
-              </ul>
-            </div>
-            <div style="display: flex; flex-direction: column">
-              <span id="gameSpeedSpan"></span>
-              <span id="messagesSpan"></span>
-            </div>
+        <div class="flex flex-col gap-5">
+          <div class="flex flex-col">
+            <span class="font-bold">messages</span>
+            <span id="gameSpeedSpan"></span>
+            <span id="messagesSpan"></span>
           </div>
           <div>
-            <h3>scores</h3>
-            <span id="scoresSpan">no scores found</span>
+            <span class="font-bold">scores</span>
+            <table id="scoresTable" class="table-auto"></table>
+          </div>
+          <div>
+            <span class="font-bold">controls</span>
+            <ul>
+              <li>
+                <strong>Left/A</strong>, <strong>Right/D</strong>, and
+                <strong>Down/S</strong> keys to move
+              </li>
+              <li><strong>Up/W</strong> keys to rotate 90 degrees clockwise</li>
+              <li><strong>Q</strong> key to hold a piece</li>
+              <li><strong>Space</strong> key to drop piece</li>
+            </ul>
           </div>
         </div>
       </div>
