--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
           </div>
           <div class="flex flex-col">
             <span class="font-bold pb-2">scores</span>
-            <table
-              id="scoresTable"
-              class="table-auto border-white border-solid border-2 text-left"
-            ></table>
+            <div class="overflow-scroll max-h-60">
+              <table
+                id="scoresTable"
+                class="table-auto border-white border-solid border-2 text-left"
+              ></table>
+            </div>
           </div>
           <div class="flex flex-col">
             <span class="font-bold pb-2">controls</span>
