Comment out some messages stuff, fix styling of scoreboard

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
           </div>
           <div class="flex flex-col">
             <span class="font-bold pb-2">scores</span>
-            <div class="overflow-scroll max-h-60">
+            <div class="overflow-y-scroll max-h-60">
               <table
                 id="scoresTable"
-                class="table-auto border-white border-solid border-2 text-left"
+                class="table-auto border-white border-solid border-2 text-left w-full"
               ></table>
             </div>
           </div>
